--- a/assets/styles/weather.css
+++ b/assets/styles/weather.css
@@ -33,10 +33,9 @@
 }
 #moduleWeather > .weatherCurrent > .weatherCurrentPlace{
     position: absolute;
-    top: 2%;
-    left: 2%;
+    top: 10px;
+    left: 10px;
     color: #fff;
-    font-size: 13px;
     font-weight: 200;
 }
 #moduleWeather > .weatherDay{
