--- a/assets/styles/mplayer.css
+++ b/assets/styles/mplayer.css
@@ -1,4 +1,5 @@
 #moduleMusicPlayer{
+	position: absolute;	 
 	background-color: #fff;
 }
 #moduleMusicPlayer > .moduleMPlayerHead{
@@ -27,15 +28,6 @@
 	font-size: 11px;
 	font-weight: 300;
 	text-transform: uppercase;
- 
-}
-#moduleMusicPlayer > .moduleMPlayerHead > .moduleMPlayerHeadLineRed{
-	position: absolute;	 
-	top: 59px;
-	left:13px;
-	right:15px;
-	height:3px;
-	background-color: #e74c3c;
 }
 #moduleMusicPlayer > .moduleMPlayerHead > .moduleMPlayerHeadLineWhite{
 	position: absolute;	 
@@ -44,6 +36,14 @@
 	right:15px;
 	height:3px;
 	background-color: #fff;
+}	
+#moduleMusicPlayer > .moduleMPlayerHead > .moduleMPlayerHeadLineRed{
+	position: absolute;	 
+	top: 59px;
+	left:13px;
+	right:15px;
+	height:3px;
+	background-color: #e74c3c;
 }
 #moduleMusicPlayer >  .moduleMPlayerHeadRedButtom{
 	position: absolute;	 
@@ -62,8 +62,8 @@
 	width:80px;
 	}
 #moduleMusicPlayer > .moduleMPlayerList{ 
-	position: absolute;
-    border-radius: 3px;
+	position: absolute;	 
+	border-radius: 3px;
 	top:71px;
  	left: 0px;
     right: 0px;
@@ -71,15 +71,15 @@
 	background-color: #e5eaeb;
 }
 #moduleMusicPlayer > .moduleMPlayerList > .moduleMPlayerListTrackPosition > div {
-	position: absolute;
+	position: absolute;	 
 	left:10px;
 	right:10px;
-	height:9%;
-
-	/* #e5eaeb; */
+	height:9.5%;
+	line-height: 30px; 
+	/* background-color:#e5eaeb;  */	
 	border-bottom: 1px solid #b5bdbe;
 
-	text-align: left;
+	text-align: left ;
 	color: #7e8182;
 	font-size: 13px;
 	font-weight: 300;
@@ -114,6 +114,6 @@
 }
 #moduleMusicPlayer > .moduleMPlayerList > .moduleMPlayerListTrackPosition > .moduleMPlayerListTrackPosition10{
 	top:90%;
-	border-bottom:none;
+	border-bottom: none;
 }
 
