--- a/assets/styles/calendar.css
+++ b/assets/styles/calendar.css
@@ -1,17 +1,17 @@
 #moduleCalendar{	
 	background-color:#e5ebeb;
 }
-#moduleCalendar > div{
+.calendarMain > div {
 	position:absolute;
 	left:0;
 	right:0;
 }
-#moduleCalendar > .calendarHead {	
+.calendarMain > .calendarHead {	
 	width:100%;
 	height:32.25%;
 	text-align:center;
 }
-#moduleCalendar > .calendarHead > .calendarCurrentDayID {
+.calendarMain > .calendarHead > .calendarCurrentDayID {
 	position:absolute;
 	text-align:center;
 	font-weight:300;
@@ -20,7 +20,7 @@
 	right:21.42%;
 	font-size:34px;
 }
-#moduleCalendar > .calendarHead > .calendarCurrentDayDate {
+.calendarMain > .calendarHead > .calendarCurrentDayDate {
 	position:absolute;
 	text-align:center;
 	font-weight:300;
@@ -28,14 +28,14 @@
 	left:39.71%;
 	font-size:13px;
 }
-#moduleCalendar > .calendarDay{	
+.calendarMain > .calendarDay{	
 	height:40px;
 	bottom:54.83%;
 	background-color: #e84c3d;
 	font-size:0;
 	color:#FFFFFF;
 }
-#moduleCalendar > .calendarDay > div{
+.calendarMain > .calendarDay > div{
 	display: inline-block;
     line-height: 40px;
     font-size: 13px;
