--- a/assets/styles/calendar.css
+++ b/assets/styles/calendar.css
@@ -43,3 +43,19 @@ position:absolute;
     font-weight: 300;
 	width:14.28%;
 }
+.previousMounth{
+	color:#b4b8b9;
+}
+.dayDate{
+	top:51.61%;
+	bottom:6.45%;
+	color:#7e8182;
+}
+.currentDate{
+	color:#FFFFFF;
+	background-color:#7e8182;
+}
+table{
+	width:100%;
+	height:100%;
+}
