--- a/assets/styles/mplayer.css
+++ b/assets/styles/mplayer.css
@@ -1,11 +1,11 @@
-#mPlayer {
+#moduleMusicPlayer {
     background-color: #fff;
 }
-#mPlayer  > div{
+#moduleMusicPlayer  > div{
     position: absolute;
 }
 
-#mPlayer  > .mPlayerHeadButton{
+#moduleMusicPlayer  > .mPlayerHeadButton{
     border-radius: 3px;
     left: 0px;
     top: 0px;
@@ -14,7 +14,7 @@
     background-color: #e74c3c;
     z-index:1;
 }
-#mPlayer  > .mPlayerHeadButtonSmallIcon{
+#moduleMusicPlayer  > .mPlayerHeadButtonSmallIcon{
     left: 3px;
     top: 21px;
     height: 70px; 
@@ -22,7 +22,7 @@
     z-index:1;
 }
 
-#mPlayer  > .mPlayerHead{
+#moduleMusicPlayer  > .mPlayerHead{
     border-radius: 0px 3px 3px 0px;
     left: 77px;
     right: 0px;
@@ -30,41 +30,41 @@
     height: 70px; 
     background-color: #e5eaeb;
 }
-#mPlayer  > .mPlayerHead >  div{
+#moduleMusicPlayer  > .mPlayerHead >  div{
     position: absolute;
     left:13px;
 }
-#mPlayer  > .mPlayerHead > .mPlayerHeadSongName{
+#moduleMusicPlayer  > .mPlayerHead > .mPlayerHeadSongName{
     top:10px;
     color: #2c3e50;
     font-size: 15px;
     font-weight: 400;
 }
-#mPlayer  > .mPlayerHead > .mPlayerHeadSongAuthor{
+#moduleMusicPlayer  > .mPlayerHead > .mPlayerHeadSongAuthor{
     top:35px;
     color: #7e8182;
     font-size: 11px;
     font-weight: 300;
     text-transform: uppercase;
 }
-#mPlayer  > .mPlayerHead > .mPlayerHeadIndicatorLine{
+#moduleMusicPlayer  > .mPlayerHead > .mPlayerHeadIndicatorLine{
     top: 59px;
     right: 13px;
     height:3px;
     background-color: #fff;
 }
-#mPlayer  > .mPlayerHead > .mPlayerHeadIndicatorLine > div{
+#moduleMusicPlayer  > .mPlayerHead > .mPlayerHeadIndicatorLine > div{
     top: 0px;
     left: 0px;
     height:100%;
 }
-#mPlayer  > .mPlayerHead  >.mPlayerHeadIndicatorLine > .Indicator  {
+#moduleMusicPlayer  > .mPlayerHead  >.mPlayerHeadIndicatorLine > .Indicator  {
     width:50%;
     background-color: #e74c3c;
 }
 
 
-#mPlayer  > .mPlayerList{ 
+#moduleMusicPlayer  > .mPlayerList{ 
     border-radius: 3px;
     top:71px;
     left: 0px;
@@ -74,7 +74,7 @@
     padding:5px 10px 0px 10px;
     overflow: auto;
 }
-#mPlayer  > .mPlayerList  > div {
+#moduleMusicPlayer  > .mPlayerList  > div {
     border-bottom: 1px solid #b5bdbe;
     height:35px;
     line-height:30px;
@@ -84,7 +84,7 @@
     font-size: 13px;
     font-weight: 300;
 }
-#mPlayer  > .mPlayerList  > .thistrack{
+#moduleMusicPlayer  > .mPlayerList  > .thistrack{
     line-height:25px;
     background-color: #f2f6f7;
 }
