--- a/assets/styles/mplayer.css
+++ b/assets/styles/mplayer.css
@@ -1,11 +1,11 @@
 #moduleMusicPlayer {
     background-color: #fff;
 }
-#moduleMusicPlayer  > div{
+#moduleMusicPlayer > div{
     position: absolute;
 }
 
-#moduleMusicPlayer  > .mPlayerHead{
+#moduleMusicPlayer > .mPlayerHead{
     border-radius: 0px 3px 3px 0px;
     left: 0px;
     right: 0px;
@@ -13,7 +13,7 @@
     height: 70px; 
     background-color: #e5eaeb;
 }
-#moduleMusicPlayer  > .mPlayerHead > .mPlayerPlayButton{
+#moduleMusicPlayer > .mPlayerHead > .mPlayerPlayButton{
     border-radius: 3px;
     left: 0px;
     top: 0px;
@@ -25,47 +25,46 @@
     background-image: url('../images/MPlayerPlayIcon.png');
     -webkit-transition: all 200ms;
 }
-#moduleMusicPlayer  > .mPlayerHead > .mPlayerPlayButton.mPlayerPlay{
+#moduleMusicPlayer > .mPlayerHead > .mPlayerPlayButton.mPlayerPlay{
     background-position: 0 0;
 }
-#moduleMusicPlayer  > .mPlayerHead > .mPlayerPlayButton.mPlayerPause{
+#moduleMusicPlayer > .mPlayerHead > .mPlayerPlayButton.mPlayerPause{
     background-position: 0 100%;
 }
-#moduleMusicPlayer  > .mPlayerHead >  div{
+#moduleMusicPlayer > .mPlayerHead >  div{
     position: absolute;
     left:90px;
 }
-#moduleMusicPlayer  > .mPlayerHead > .mPlayerHeadSongName{
+#moduleMusicPlayer > .mPlayerHead > .mPlayerHeadSongName{
     top:10px;
     color: #2c3e50;
     font-size: 15px;
     font-weight: 400;
 }
-#moduleMusicPlayer  > .mPlayerHead > .mPlayerHeadSongAuthor{
+#moduleMusicPlayer > .mPlayerHead > .mPlayerHeadSongAuthor{
     top:35px;
     color: #7e8182;
     font-size: 11px;
     font-weight: 300;
-    text-transform: uppercase;
 }
-#moduleMusicPlayer  > .mPlayerHead > .mPlayerHeadIndicatorLine{
+#moduleMusicPlayer > .mPlayerHead > .mPlayerHeadIndicatorLine{
     top: 59px;
     right: 13px;
     height:3px;
     background-color: #fff;
 }
-#moduleMusicPlayer  > .mPlayerHead > .mPlayerHeadIndicatorLine > div{
+#moduleMusicPlayer > .mPlayerHead > .mPlayerHeadIndicatorLine > div{
     top: 0px;
     left: 0px;
     height:100%;
 }
-#moduleMusicPlayer  > .mPlayerHead  >.mPlayerHeadIndicatorLine > .Indicator  {
-    width:50%;
+#moduleMusicPlayer > .mPlayerHead > .mPlayerHeadIndicatorLine > .Indicator  {
+    width: 0;
     background-color: #e74c3c;
 }
 
 
-#moduleMusicPlayer  > .mPlayerList{ 
+#moduleMusicPlayer > .mPlayerList{ 
     border-radius: 3px;
     top:71px;
     left: 0px;
@@ -74,8 +73,9 @@
     background-color: #e5eaeb;
     padding:5px 10px 0px 10px;
     overflow: auto;
+    cursor: pointer;
 }
-#moduleMusicPlayer  > .mPlayerList  > div {
+#moduleMusicPlayer > .mPlayerList > div {
     border-bottom: 1px solid #b5bdbe;
     height:35px;
     line-height:30px;
@@ -85,8 +85,7 @@
     font-size: 13px;
     font-weight: 300;
 }
-#moduleMusicPlayer  > .mPlayerList  > .thistrack{
-    line-height:25px;
+#moduleMusicPlayer > .mPlayerList > .thistrack{
     background-color: #f2f6f7;
 }
 
