--- a/assets/styles/mplayer.css
+++ b/assets/styles/mplayer.css
@@ -84,6 +84,9 @@
     color: #7e8182;
     font-size: 13px;
     font-weight: 300;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 #moduleMusicPlayer > .mPlayerList > .thistrack{
     background-color: #f2f6f7;
